--- a/landPage.html
+++ b/landPage.html
@@ -7,8 +7,9 @@
     <title>Landing Page</title>
     <link rel = "stylesheet" href = "style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class = "top-section">
@@ -32,6 +33,7 @@
                 <div><h1 class = "header-hero"> Demon Slayer Corps</h1></div>
 
                 <div class = "content">
+                   
                 The Demon Slayer Corps (鬼殺隊) is the main protagonistic organization in the anime and manga series Demon Slayer: Kimetsu no Yaiba. They are an organization of swordsmen that existed since ancient times in Japan in order to protect humanity from the Demons.
 
                 </div> 
@@ -71,10 +73,47 @@
       </div>
 
       <div class = "slot">
-        <img src = "de6122135618b3e468356fc24c8bbf381544828fr1-400-401v2_00.jpeg">
-        <p> Inosuke </p>
+        <img id =  "ino" src = "7c48b89303616eec8ccda330c5051da2.jpeg">
+        <p class = "ino "> Inosuke </p>
       </div>
 
+    </div>
+
+    <div class = "quote-container">
+        <div class = "quote">
+            <div class = "quote-flex">
+                <div class = "quote"> 
+                    Feel the rage. The powerful, pure rage of not being able to forgive will become your unswerving drive to take action.
+                </div>
+
+                <div class = "author">
+                    - Giyu Tomioka
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class = "cta-container">
+        <div class = "cta">
+            <div class = "left">
+                <div class = "contentLeft"> 
+                    <h1 class = "cta-text"> Join the Demon Slayer Corps. Your time has Come. </h1>
+                    <p class = "su">Sign Up for the Demon Slayer Corps using the button on right.</p>
+                </div>
+            </div>
+
+            <div class = "right">
+                <button class = "rButton"> Sign Up </button>
+            </div>
+        </div>
+    </div>
+
+    <div class = "footer">
+        <div class = "cr">
+            Webpage By: freeze
+        </div>
     </div>
 </body>
 </html>
