--- a/landPage.html
+++ b/landPage.html
@@ -33,9 +33,10 @@
                 <div><h1 class = "header-hero"> Demon Slayer Corps</h1></div>
 
                 <div class = "content">
-                   
-                The Demon Slayer Corps (鬼殺隊) is the main protagonistic organization in the anime and manga series Demon Slayer: Kimetsu no Yaiba. They are an organization of swordsmen that existed since ancient times in Japan in order to protect humanity from the Demons.
-
+                   <div>The Demon Slayer Corps (鬼殺隊) is the main protagonistic</div>
+                   <div>organization in the anime and manga series Demon Slayer: Kimetsu</div>   
+                    <div>no Yaiba. They are an organization of swordsmen that existed since</div> 
+                    <div>ancient times in Japan in order to protect humanity from the Demons.</div>
                 </div> 
                  <div><button> Join Now </button></div>
              </div>
