added quote marks for giyu's quote

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class = "quote">
             <div class = "quote-flex">
                 <div class = "quote"> 
-                    Feel the rage. The powerful, pure rage of not being able to forgive will become your unswerving drive to take action.
+                    "Feel the rage. The powerful, pure rage of not being able to forgive will become your unswerving drive to take action."
                 </div>
 
                 <div class = "author">
