--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              </div>
             
              <div class= "image">
-                <img style = " 
+                <img class = "much" style = " 
           
                 border: 4px #3882F6 solid;
                 border-radius: 10px;
